# LIRMIA

./: .gitignore  CMakeLists.txt  README.md
model/: Lirmia3.dia
model/Communication_seq_diagrams/: Bad_com.dia  Good_com_xyz.dia
src/: arduino.ino  arduino_lirmia.ino  arduino_sayab.ino  arduino_unknown.ino  local_cam_rec.cpp  remote_cam.cpp  remote_cam_lirmia.cpp  remote_cam_r2d2.cpp  remote_cam_unknown.cpp  remote_control_monitor.cpp  remote_control_monitor_cookie.cpp  remote_control_monitor_lirmia.cpp  remote_control_monitor_r2d2.cpp  remote_control_monitor_sayab.cpp  remote_control_monitor_unknown.cpp  remote_controller.cpp
src/arduino/arduino_lirmia/: arduino_lirmia.ino
src/arduino/arduino_lirmia_MS5837/: arduino_lirmia_MS5837.ino
src/arduino/arduino_lirmia_ms58lib/: arduino_lirmia_ms58lib.ino
src/core/: CMakeLists.txt  ComDraw.cpp  ComDraw.h  ComJava.cpp  ComJava.h  ComPython.cpp  ComPython.h  ComThread.cpp  ComThread.h  CoreJava.cpp  CoreJava.h  Maestro.cpp  Maestro.h  Share.cpp  Share.h
src/interfaces/: Camera_client.cpp  Camera_client.h  Camera_server.cpp  Camera_server.h  FSM.cpp  FSM.h  FSMDraw.cpp  FSMDraw.h  I2C.cpp  I2C.h  Joystick.cpp  Joystick.h  Maths_tools.h  SPI.cpp  SPI.h  Serial.cpp  Serial.h  TCP_client.cpp  TCP_client.h  TCP_server.cpp  TCP_server.h
src/interfaces/vision/: Blobs.cpp  Blobs.h  Body.cpp  Body.h  CMakeLists.txt  Gui.cpp  Gui.h  HSV_tools.cpp  HSV_tools.h  README.md  Reco.cpp  Reco.h  hsv_params.h
src/mains/: Cookie.cpp  Cookie.h  Lirmia.cpp  Lirmia.h  R2D2.cpp  R2D2.h  Sayab.cpp  Sayab.h  Unknown.cpp  Unknown.h
src/parts/: Acoustic_modem.cpp  Acoustic_modem.h  Autonomy.cpp  Autonomy.h  Cameras.cpp  Cameras.h  Clock.cpp  Clock.h  Compass_CMPS10.cpp  Compass_CMPS10.h  Depth.cpp  Depth.h  Depth_BMP085.cpp  Depth_BMP085.h  Depth_MS5803.cpp  Depth_MS5803.h  Depth_MS5803_iss.cpp  Depth_MS5803_iss.h  Depth_MS5837.cpp  Depth_MS5837.h  Echosonder.cpp  Echosonder.h  Gps.cpp  Gps.h  Gyro_ITG3200.cpp  Gyro_ITG3200.h  Gyro_L3GD20H.cpp  Gyro_L3GD20H.h  I2C.cpp  I2C.h  Imu.cpp  Imu.h  Imu_UM6LT.cpp  Imu_UM6LT.h  Imu_razor.cpp  Imu_razor.h  Logger.cpp  Logger.h  Mapping.cpp  Mapping.h  (+22 more)
src/parts/cookie/: Autonomy.cpp  Autonomy.h  Cameras.h  Logger.cpp  Motors.cpp  Remote_control.cpp  Remote_monitor.cpp  State.cpp  State.h  State_machine.cpp
src/parts/lirmia/: Acoustic_modem.cpp  Acoustic_modem.h  Autonomy.cpp  Autonomy.h  Cameras.cpp  Cameras.h  Logger.cpp  Logger.h  Logger_aux.cpp  Logger_aux.h  Mapping.h  Motors.cpp  Motors.h  Remote_control.cpp  Remote_control.h  Remote_monitor.cpp  Remote_monitor.h  Simulator.cpp  Simulator.h  State.cpp  State.h  State_machine.cpp  State_machine.h
src/parts/r2d2/: Autonomy.cpp  Autonomy.h  Cameras.cpp  Cameras.h  Logger.h  Motors.cpp  Remote_control.cpp  Remote_control.h  Remote_monitor.cpp  Remote_monitor.h  Sonima.h  State.cpp  State.h  State_machine.cpp  State_machine.h
src/parts/sayab/: Acoustic_modem.cpp  Acoustic_modem.h  Autonomy.cpp  Autonomy.h  Logger.cpp  Logger.h  Logger_aux.cpp  Logger_aux.h  Motors.cpp  Motors.h  Remote_control.cpp  Remote_control.h  Remote_monitor.cpp  Remote_monitor.h  State.cpp  State.h  State_machine.cpp  State_machine.h
src/parts/unknown/: Acoustic_modem.cpp  Autonomy.cpp  Autonomy.h  Cameras.cpp  Cameras.h  Logger.cpp  Logger.h  Motors.cpp  Motors.h  Remote_control.cpp  Remote_control.h  Remote_monitor.cpp  Remote_monitor.h  Simulator.cpp  Simulator.h  State.cpp  State.h  State_machine.cpp  State_machine.h
src/remote/: remote_cam_cookie.cpp  remote_cam_lirmia.cpp  remote_cam_r2d2.cpp  remote_cam_sayab.cpp  remote_control_monitor_cookie.cpp  remote_control_monitor_lirmia.cpp  remote_control_monitor_r2d2.cpp  remote_control_monitor_sayab.cpp
src/units_testing/: blobs.cpp  local_cam_rec.cpp  pipeline.cpp
